--- a/src/main/resources/assets/parryeverything/lang/en_us.json
+++ b/src/main/resources/assets/parryeverything/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.parryeverything.kusabimaru": "Kusabimaru",
-  "item.parryeverything.shinobi_prosthetic": "Shinbo Prosthetic"
+  "item.parryeverything.shinobi_prosthetic": "Shinbo Prosthetic",
+  "sounds.parryeverything.parry_deflect": "Deflect"
 }
