fixed name and added 3d model

--- a/src/main/resources/assets/parryeverything/lang/en_us.json
+++ b/src/main/resources/assets/parryeverything/lang/en_us.json
@@ -1,5 +1,5 @@
 {
   "item.parryeverything.kusabimaru": "Kusabimaru",
-  "item.parryeverything.shinobi_prosthetic": "Shinbo Prosthetic",
+  "item.parryeverything.shinobi_prosthetic": "Shinobi Prosthetic",
   "sounds.parryeverything.parry_deflect": "Deflect"
 }
