fixed cooldown bug and added WIP flame vent

--- a/src/main/resources/assets/parryeverything/lang/en_us.json
+++ b/src/main/resources/assets/parryeverything/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.parryeverything.kusabimaru": "Kusabimaru",
+  "item.parryeverything.flame_vent": "Flame Vent",
   "item.parryeverything.shinobi_prosthetic": "Shinobi Prosthetic",
   "sounds.parryeverything.parry_deflect": "Deflect"
 }
